--- a/overlay/packages/apps/Settings/res/values/strings.xml
+++ b/overlay/packages/apps/Settings/res/values/strings.xml
@@ -14,6 +14,6 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- Awaken maintainer -->
-    <string name="awaken_maintainer">OdSazib</string>
+    <string name="octavi_maintainer">Ritwik_Raj</string>
 
 </resources>
